[tool.poetry]
name = "ruby-gems-guide"
version = "0.1.0"
description = "A Guide for Creating Ruby Gems"
authors = ["James Couball <jcouball@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
markdown-include = "^0.8.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-macros-plugin = "^1.2.0"
pymdown-extensions = "^10.11.2"

[tool.poetry.dev-dependencies]
# Add any tools you want for development or documentation testing
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
